fixed spacing on main page

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6423,7 +6423,7 @@ h4{
 header.banner{
 	width:100%;
 	height:80px;
-	position:relative;
+	position:fixed;
 	border-bottom:1px solid #e6e6e6;
 	background:#fff;
 	z-index:9000;
@@ -6551,7 +6551,7 @@ footer.site-footer .credits{
 section.home{
 	text-align:center;
 	margin-top:0px;
-	padding-top:40px;
+	padding-top:0px;
 	padding-bottom:40px;
 	margin-bottom:0px
 }
